--- a/menu.html
+++ b/menu.html
@@ -49,14 +49,14 @@
         </article>
 
         <article class="card reveal-card">
-          <img src="Matcha.png" alt="Matcha Tiramisu">
+          <img src="Matcha.PNG" alt="Matcha Tiramisu">
           <h3>Matcha Tiramisu</h3>
           <p>Japanese matcha flavor with a delicate bittersweet finish.</p>
           <div class="price">₱170 / slice · ₱1,200 whole</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Mango.png" alt="Mango Tiramisu">
+          <img src="Mango.PNG" alt="Mango Tiramisu">
           <h3>Mango Tiramisu</h3>
           <p>Fresh mango puree layered with creamy mascarpone and soft sponge.</p>
           <div class="price">₱170 / slice · ₱1,200 whole</div>
@@ -77,49 +77,49 @@
       <div class="menu-grid">
 
         <article class="card reveal-card">
-          <img src="Espresso.png" alt="Espresso">
+          <img src="Espresso.PNG" alt="Espresso">
           <h3>Espresso</h3>
           <p>Rich and bold Italian-style espresso shot.</p>
           <div class="price">₱90</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Americano.png" alt="Americano">
+          <img src="Americano.PNG" alt="Americano">
           <h3>Americano</h3>
           <p>Classic black coffee with deep, smooth flavor.</p>
           <div class="price">₱100 (hot) · ₱110 (iced)</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Cappuccino.png" alt="Cappuccino">
+          <img src="Cappuccino.PNG" alt="Cappuccino">
           <h3>Cappuccino</h3>
           <p>Balanced blend of espresso, milk, and frothy foam.</p>
           <div class="price">₱120</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Latte.png" alt="Caffè Latte">
+          <img src="Latte.PNG" alt="Caffè Latte">
           <h3>Caffè Latte</h3>
           <p>Smooth espresso topped with creamy steamed milk.</p>
           <div class="price">₱120 (hot) · ₱130 (iced)</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Mocha.png" alt="Mocha">
+          <img src="Mocha.PNG" alt="Mocha">
           <h3>Mocha</h3>
           <p>Espresso blended with rich chocolate and steamed milk.</p>
           <div class="price">₱140</div>
         </article>
 
         <article class="card reveal-card">
-          <img src="Caramel.png" alt="Caramel Macchiato">
+          <img src="Caramel.PNG" alt="Caramel Macchiato">
           <h3>Caramel Macchiato</h3>
           <p>Sweet caramel drizzle over velvety espresso and milk foam.</p>
           <div class="price">₱140</div>
         </article>
 
          <article class="card reveal-card">
-          <img src="Seasalt.png" alt="Caramel Macchiato">
+          <img src="Seasalt.PNG" alt="Caramel Macchiato">
           <h3>Sea salt Latte</h3>
           <p>espresso, milk, and a sweetener like caramel syrup or maple syrup, topped with a sea salt cream.</p>
           <div class="price">₱140</div>
@@ -138,4 +138,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
