--- a/order.html
+++ b/order.html
@@ -12,7 +12,7 @@
     <div class="container header-inner">
       <div class="brand">
         <div class="logo">
-          <img src="LOGO.png" alt="The Tiramisu Corner Logo">
+          <img src="LOGO.PNG" alt="The Tiramisu Corner Logo">
         </div>
         <div>
           <h1>The Tiramisu Corner</h1>
@@ -140,3 +140,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
