--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="container header-inner">
       <div class="brand">
         <div class="logo">
-          <img src="LOGO.png" alt="The Tiramisu Corner Logo">
+          <img src="LOGO.PNG" alt="The Tiramisu Corner Logo">
         </div>
         <div>
           <h1>The Tiramisu Corner</h1>
@@ -60,3 +60,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
