--- a/order.html
+++ b/order.html
@@ -114,7 +114,7 @@
       <div class="receipt-box">
         <div class="receipt">
           <div class="receipt-header">
-            <img src="LOGO.png" alt="Logo" class="receipt-logo">
+            <img src="LOGO.PNG" alt="Logo" class="receipt-logo">
             <h4>The Tiramisu Corner</h4>
             <p class="receipt-sub">Where Every Bite Feels Like Home</p>
           </div>
@@ -140,5 +140,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
